2025-01-19T00:41:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12848802658 # 767
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-19
* notice: last 14d: unq all: 16 17
* notice: prev accum: outdated-unq outdated-all / unq all: 3817 8386 / 3836 8405
* notice: next accum: outdated-unq outdated-all / unq all: 3825 8394 / 3842 8411
* notice: prev exec diff / last date diff / accum: unq all: +6 +6 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-12-30 2025-01-01 2025-01-02 2025-01-04] / [2025-01-13 2025-01-14 2025-01-17 2025-01-18]

2025-01-12T01:52:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12729444992 # 766
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-12
* notice: last 14d: unq all: 16 19
* notice: prev accum: outdated-unq outdated-all / unq all: 3816 8385 / 3836 8405
* notice: next accum: outdated-unq outdated-all / unq all: 3817 8386 / 3836 8405
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-28] / []

2025-01-11T01:44:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12720023350 # 764
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-11
* notice: last 14d: unq all: 17 20
* notice: prev accum: outdated-unq outdated-all / unq all: 3816 8385 / 3835 8404
* notice: next accum: outdated-unq outdated-all / unq all: 3816 8385 / 3836 8405
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-01-10]

2025-01-10T12:43:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12709740863 # 763