@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-01-19T00:41:15Z",
+  "timestamp" : "2025-01-19T12:12:36Z",
   "count_outdated" : 8394,
   "uniques_outdated" : 3825,
-  "count" : 8411,
-  "uniques" : 3842,
+  "count" : 8413,
+  "uniques" : 3844,
   "clones" : [
     {
       "timestamp": "2025-01-06T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-01-19T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
