@@ -1,6 +1,6 @@
 {
-  "count": 17,
-  "uniques": 16,
+  "count": 19,
+  "uniques": 17,
   "clones": [
     {
       "timestamp": "2025-01-06T00:00:00Z",
@@ -46,6 +46,11 @@
       "timestamp": "2025-01-18T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-01-19T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
