@@ -1,3 +1,12 @@
+2025-01-19T12:12:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12853391124 # 768
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-19
+* notice: last 14d: unq all: 17 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 3825 8394 / 3842 8411
+* notice: next accum: outdated-unq outdated-all / unq all: 3825 8394 / 3844 8413
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2025-01-19]
+
 2025-01-19T00:41:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12848802658 # 767
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-19
